--- a/src/components/Products/productItem.css
+++ b/src/components/Products/productItem.css
@@ -12,11 +12,18 @@
   transition: opacity 0.5s ease-out, transform 0.5s ease-out, box-shadow 0.3s ease;
   margin: 10px;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+  justify-content: center;
 }
 
 .card.card-animate {
   opacity: 1;
   transform: translateY(0);
+  font-family: Assistant, sans-serif;
+    border-color: #ddd;
+    border: 1px solid transparent;
+    border-radius: 0px;
+    max-width: 220px;
+    height: 330px;
 }
 
 .card:hover {
@@ -26,7 +33,7 @@
 /* Upper Section */
 .card-upper {
   background-color: #ebecf1;
-  height: 200px; /* Adjusted height for upper section */
+  height: 220px; /* Adjusted height for upper section */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -34,7 +41,7 @@
 
 .card-image {
   width: auto;
-  height: 80%;
+  height: 100%;
   object-fit: contain;
 }
 
@@ -59,10 +66,13 @@
 }
 
 .card-title {
-  font-size: 18px;
-  margin: 10px 0;
-  color: #333;
-  font-weight: bold;
+  margin: 0;
+  text-align: left;
+  font-weight: 700;
+  font-size: 1.16rem;
+  font-family: "roboto", Arial, Helvetica, sans-serif;
+  color:#333;
+  
 }
 
 /* Condition Text */
@@ -77,27 +87,33 @@
 }
 
 .card-condition.card-used {
-  color: #ff4757;
+  color: #000df2;
 }
 
 /* Price Container */
 .card-price-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 10px;
+  font-family: ui-sans-serif;
+    font-size: 17px;
+    display: flex
+;
+    justify-content: left;
+    align-items: center;
+    margin-top: 10px;
+    gap: 10px;
 }
 
 .card-price {
-  color: #ff9900;
-  font-size: 15px;
-  font-weight: bold;
+    text-align: left;
+    font-family: "roboto", Arial, Helvetica, sans-serif;
+    margin: 0;
+    color: #000000;
+    font-weight: bold;
 }
 
 .card-original-price {
   color: #a0a0a0;
   text-decoration: line-through;
-  font-size: 15px;
+  margin: 0;
 }
 
 .card-more-button {
@@ -127,19 +143,44 @@
   .product-cards {
     grid-template-columns: repeat(1, 1fr); /* Ensure minimum 1 product in a row */
   }
-  .card {
+  .card.card-animate {
+    font-family: Assistant, sans-serif;
+    border-color: #ddd;
+    border: 1px solid transparent;
+    border-radius: 0px;
     max-width: 150px;
-    height: 410px;
+    height: 290px;
   }
   .card-title {
     font-size: 15px;
   }
-  .card-price-container{
-    display: grid;
-    justify-content: center;
+  .card-upper {
+    height: 170px;
   }
-  .card-price, .card-original-price{
-    font-size: 12px;
-    margin: 5px 0;
+  .top-products-section.animate {
+    background-color: #f4f4f4;
+    max-width: 100%;
+    padding: 10px;
+  }
+  .card-lower {
+    margin :0;
+  }
+
+  .card-title {
+    margin: 0;
+    text-align: left;
+    font-weight: 700;
+    font-size: 1.125rem;
+    font-family: "roboto", Arial, Helvetica, sans-serif;
+  }
+  .product-attributes {
+    text-align: left;
+    color: #707070;
+    font-size: 14px;
+    margin-top: 5px;
+  }
+
+  .card-price-container {
+    font-size: 15px;
   }
 }
