--- a/src/components/CategoriesComponent/Categories.css
+++ b/src/components/CategoriesComponent/Categories.css
@@ -1,3 +1,12 @@
+/* Adjusted Checkbox Alignment */
+.filter-checkbox {
+  display: flex;
+  align-items: center; /* Ensures proper vertical alignment */
+  gap: 8px; /* Space between checkbox and label */
+  margin-bottom: 8px;
+  white-space: nowrap; /* Prevent text wrapping */
+}
+
 .categories-container {
   width: 250px;
   padding: 20px;
@@ -8,7 +17,8 @@
   top: 70px; /* Adjust based on your header height */
   bottom: 0;
   left: 0;
-  overflow-y: auto;
+  overflow-y: auto; /* Allow vertical scrolling */
+  overflow-x: hidden; /* Prevent horizontal scrollbar */
 }
 
 .categories-title {
@@ -20,7 +30,8 @@
   padding-bottom: 10px;
 }
 
-.categories-list, .subcategories-list {
+.categories-list,
+.subcategories-list {
   list-style-type: none;
   padding: 0;
   margin-top: 15px;
@@ -73,10 +84,20 @@
   transition: color 0.3s ease;
 }
 
-.subcategory-item:hover, .subcategory-item.selected {
+.subcategory-item:hover,
+.subcategory-item.selected {
   color: #007bff;
 }
 
 .loading {
   font-style: italic;
+}
+
+.attribute-filter input{
+  width: 20px;
+  float: right;
+}
+
+.attribute-filter div{
+ margin: 10px 0;
 }
