--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -7,8 +7,6 @@
   background-position: center; /* Center the background image */
   position: relative;
   height: 600px;
-  animation: fadeIn 2s ease-in-out;
-  transition: background-image 1s ease-in-out;
   background-repeat: no-repeat; /* Ensure the background image doesn't repeat */
 }
 
@@ -75,6 +73,7 @@
   .section-container {
       flex-direction: column;
       text-align: center;
+      padding: 20px 50px;
   }
 
   .text-block {
@@ -86,11 +85,18 @@
   }
 
   .main-headline {
-    font-size: 39px;
+    font-size: 38px;
   }
   .button-container {
     margin-top: 250px;
 }
+}
+
+@media (max-width: 420px) {
+
+  .main-headline {
+    font-size: 32px;
+  }
 }
 
 /* Animations */
